--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-simple",
+  "name": "jwt",
   "private": true,
   "version": "1.1.0",
   "type": "module",
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "dayjs": "^1.11.13",
+    "jose": "^6.0.11",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
